--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 body {
     scroll-behavior: smooth;
-    background-color: #f7f7f6;
+    background-color: #ffffff;
     display: flex;
     width: 100%;
     flex-direction: column;
@@ -42,9 +42,12 @@ main {
 }
 
 
-.story {
-    background-color: honeydew;
-    color: #262626;
+.story  {
+    background-color: #4e567b;
+}
+
+.portfolio {
+    background-color: #4e567b;
 }
 
 .name {
@@ -61,7 +64,6 @@ main {
 
 .name, .titel, .spruch {
     text-shadow: 4px 4px 4px #161414;
-    color: honeydew;
 }
 
 body {
@@ -79,7 +81,7 @@ header>nav>ul>li {
 } 
 
 .content {
-    padding: 0.5rem 20px;
+    padding: 2rem 20px;
     margin: 0 auto;
 }
 
@@ -92,12 +94,22 @@ a {
     text-decoration: none;
     color: honeydew;
 }
-
+h1 {
+    font-size: 2.0rem;
+    margin-bottom: 10px;
+}
 
 h2 {
-    font-size: 1.5rem;
+    font-size: 1.0rem;
     margin-bottom: 10px;
-    color: #2a2a2a;
+}
+
+.dark h1, .dark h2, .dark h3, .dark p {
+    color: #ffffff;
+}
+
+.light h1, .light h2, light h3, .light p {
+    color: #000000;
 }
 
 footer {
@@ -125,13 +137,31 @@ footer {
 }
 
 .bmore, .bkontakt {
-    margin: 10px 10px 0 0;
+    margin: 20px 10px 0 0;
     padding: 10px 20px;
     border: none;
+    border-radius: 2px;
     min-width: 150px;
     max-width: 150px;
     background-color: #262626;
     color: #ffffff;
     font-size: 1rem;
     cursor: pointer;
+}
+
+.bmore:hover, .bkontakt:hover {
+    background-color: #d6593d;
+}
+
+.portfolio>.card {
+    display: inline-block;
+}
+.card {
+    border: 1px solid #dcdcdc;
+    width: 250px;
+    height: 300px;
+    border-radius: 5px;
+    padding: 20px;
+    margin: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
 }
