--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ main {
     background-image: url(hero_2.jpg);
     background-size: cover;
     background-position: center;
-    height: 500px;
+    height: 100dvh;
     display: flex;
     width: 100%;
     flex-direction: column;
@@ -73,6 +73,9 @@ body {
     justify-content: center;
     text-align: center;
     width: 100%;
+}
+section {
+    min-height: 100dvh;
 }
 
 header>nav>ul>li {
@@ -164,4 +167,25 @@ footer {
     padding: 20px;
     margin: 10px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin: 20px auto;
+}
+
+.inname, input, textarea, select {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+#yes {
+    display: inline-block;
 }
