--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 body {
     scroll-behavior: smooth;
-    background-color: #ffffff;
+    background-color: #e0e0e0;
     display: flex;
     width: 100%;
     flex-direction: column;
@@ -34,6 +34,7 @@ main {
     background-image: url(hero_2.jpg);
     background-size: cover;
     background-position: center;
+    margin: 0 0 25px 0;
     height: 100dvh;
     display: flex;
     width: 100%;
@@ -41,9 +42,36 @@ main {
     justify-content: center;
 }
 
+.content {
+    width: 90%;
+    height: auto;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 .story  {
     background-color: #4e567b;
+    width: 90%;
+    height: auto;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.skill, .greeting{
+    background-color: #ededed;
+    width: 90%;
+    height: auto;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .portfolio {
@@ -85,7 +113,7 @@ header>nav>ul>li {
 
 .content {
     padding: 2rem 20px;
-    margin: 0 auto;
+    margin: 25px auto;
 }
 
 .hero {
@@ -163,6 +191,9 @@ footer {
     border: 1px solid #dcdcdc;
     width: 250px;
     height: 300px;
+    background-image: url(beispiel_1.png);
+    background-size: cover;
+    background-position: center;
     border-radius: 5px;
     padding: 20px;
     margin: 10px;
@@ -184,8 +215,30 @@ form {
     margin: 10px 0;
     border: 1px solid #ccc;
     border-radius: 4px;
+    cursor: pointer;
+    margin-bottom: 2rem;
 }
 
 #yes {
     display: inline-block;
+}
+
+label {
+    align-self: flex-start;
+    margin-left: 10px;
+    font-size: 0.9rem;
+}
+
+#submit {
+    width: auto;
+    padding: 10px 20px;
+    background-color: #4e567b;
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#submit:hover {
+    background-color: #d6593d;
 }
