--- a/style.css
+++ b/style.css
@@ -3,6 +3,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Stack+Sans+Notch:wght@200..700&display=swap');
 
 /* root */
+
+:root {
+    --primary-color: #dd9048;
+    --secondary-color: #ededed;
+    --accent-color: #d6593d;
+    --background-color: #e0e0e0;
+    --text-color-light: #000000;
+    --text-color-dark: #ffffff;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -53,7 +63,7 @@ main {
 }
 
 .story  {
-    background-color: #4e567b;
+    background-image: linear-gradient(45deg, #adb4c2, #7264aa, #276780);
     width: 90%;
     height: auto;
     border-radius: 10px;
@@ -75,7 +85,7 @@ main {
 }
 
 .portfolio {
-    background-color: #4e567b;
+    background-image: linear-gradient(45deg, #adb4c2, #7264aa, #276780);
 }
 
 .name {
@@ -103,13 +113,22 @@ body {
     width: 100%;
 }
 section {
-    min-height: 100dvh;
+    min-height: auto;
 }
 
 header>nav>ul>li {
     display: inline;
     margin: 0 15px; 
-} 
+}
+
+.pp {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border: solid 3px #ffffff;
+    border-radius: 100%;
+    margin-bottom: 20px;
+}
 
 .content {
     padding: 2rem 20px;
@@ -181,7 +200,8 @@ footer {
 }
 
 .bmore:hover, .bkontakt:hover {
-    background-color: #d6593d;
+    background-color: #ededed;
+    color: #262626;
 }
 
 .portfolio>.card {
@@ -200,6 +220,10 @@ footer {
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+.bgGelb {
+    background-color: #ededed
+}
+
 form {
     display: flex;
     flex-direction: column;
@@ -207,6 +231,7 @@ form {
     justify-content: center;
     width: 100%;
     margin: 20px auto;
+    
 }
 
 .inname, input, textarea, select {
@@ -232,7 +257,7 @@ label {
 #submit {
     width: auto;
     padding: 10px 20px;
-    background-color: #4e567b;
+    background-color: #7487df;
     color: #ffffff;
     border: none;
     border-radius: 4px;
@@ -240,5 +265,5 @@ label {
 }
 
 #submit:hover {
-    background-color: #d6593d;
+    background-color: #90e32b;
 }
