--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ main {
 }
 
 .story  {
-    background-image: linear-gradient(45deg, #adb4c2, #7264aa, #276780);
+    background-image: linear-gradient(45deg, #1f1d6b, #6b5c8a, #1f1d6b);
     width: 90%;
     height: auto;
     border-radius: 10px;
@@ -85,7 +85,7 @@ main {
 }
 
 .portfolio {
-    background-image: linear-gradient(45deg, #adb4c2, #7264aa, #276780);
+    background-image: linear-gradient(45deg, #1f1d6b, #6b5c8a, #1f1d6b);
 }
 
 .name {
@@ -114,6 +114,7 @@ body {
 }
 section {
     min-height: auto;
+    box-shadow: 2px 2px 5px #0000001a;
 }
 
 header>nav>ul>li {
@@ -133,6 +134,7 @@ header>nav>ul>li {
 .content {
     padding: 2rem 20px;
     margin: 25px auto;
+    box-shadow: 2px 2px 5px #939191;
 }
 
 .hero {
