--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ main {
 }
 
 .story  {
-    background-image: linear-gradient(45deg, #1f1d6b, #6b5c8a, #1f1d6b);
+    background-image: linear-gradient(45deg, #5dd2b5, #1b8e71, #5dd2b5);
     width: 90%;
     height: auto;
     border-radius: 10px;
@@ -85,7 +85,7 @@ main {
 }
 
 .portfolio {
-    background-image: linear-gradient(45deg, #1f1d6b, #6b5c8a, #1f1d6b);
+    background-image: linear-gradient(45deg, #5dd2b5, #1b8e71, #5dd2b5);
 }
 
 .name {
@@ -206,22 +206,6 @@ footer {
     color: #262626;
 }
 
-.portfolio>.card {
-    display: inline-block;
-}
-.card {
-    border: 1px solid #dcdcdc;
-    width: 250px;
-    height: 300px;
-    background-image: url(beispiel_1.png);
-    background-size: cover;
-    background-position: center;
-    border-radius: 5px;
-    padding: 20px;
-    margin: 10px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-}
-
 .bgGelb {
     background-color: #ededed
 }
@@ -268,4 +252,43 @@ label {
 
 #submit:hover {
     background-color: #90e32b;
+}
+
+/* Karussell */
+.carousel-container {
+    width: 90%;
+    overflow: visible;
+    padding: 10px 0;
+}
+
+.carousel {
+    display: flex;
+    gap: 20px;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+
+}
+
+.carousel::-webkit-scrollbar {
+    display: none;
+
+}
+
+.card {
+    width: 100px;
+    flex: 0 0 100%;
+    scroll-snap-align: start;
+    border-radius: 15px;
+    overflow: hidden;
+    border: solid 2px #cccccc;
+    background-image: linear-gradient(45deg, #efefef, #ffffff, #efefef);
+    color: #303030;
+}
+
+.card p {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+
 }
