--- a/style.css
+++ b/style.css
@@ -1,14 +1,65 @@
-body {
+:root {
+    --color-text-dark: #1e1c25;
+    --color-text-light: #f8f8f8;
+    --color-background-dark: #1e1c25;
+    --color-background-light: #f8f8f8;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, Arial, sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
+* {
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
+html, body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    height: 100%;
+    font-size: 14px;
+}
+
+body {
+    height: 100vh;
+    width: 100%;
+}
+
+#nav {
+    background-color: var(--color-background-dark);
+    color: var(--color-text-light);
+    padding: 15px 20px;
+    text-align: center;
+    width: 100%;
+    margin: 0 auto;
+}
+
+#divider {
+    border-top: 1px solid var(--color-text-light);
+    width: 90%;
+    margin: 0 auto;
+}
+
+#wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
 }
 
 .section {
-    padding: 60px 20px;
+    padding: 20px 20px;
     max-width: 1200px;
     margin: 0 auto;
+    border-radius: 5px;
+}
+.section_dark {
+    background-color: var(--color-background-dark);
+    color: var(--color-text-light);
 }
 
 .buttons button {
@@ -16,21 +67,66 @@ body {
     margin-right: 10px;
     padding: 10px 20px;
     cursor: pointer;
+    width: 250px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(20, 20, 20, 0.504);
+    border: none;
+}
+
+button a {
+    text-decoration: none;
+    color: inherit;
+    font-size: 1.5rem;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.buttons button:hover {
+    background-image: linear-gradient(135deg, #d3e456, #e5dc28);
+    color: var(--color-text-dark);
 }
 
 .button_dark {
-    background-color: #333;
-    color: #fff;
+    background-color:var(--color-background-dark);
+    color: var(--color-text-light);
 }
 
 .button_light {
-    background-color: #f4f4f4;
-    color: #333;
+    background-color: var(--color-light);
+    color: var(--color-dark);
+}
+.card
+{
+    background-color: var(--color-background-light);
+    color: var(--color-text-dark);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    margin: 20px auto;
+    text-align: center;
+}
+
+#profilbild {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    display: block;
+    margin: 20px auto 0 auto;
+    border: solid 5px var(--color-background-dark);
+    box-shadow: 0 4px 8px rgba(20, 20, 20, 0.504);
 }
 
 footer {
+    width: 100%;
     text-align: center;
     padding: 20px;
-    background-color: #f4f4f4;
-    margin-top: 40px;
+    background-color: var(--color-background-dark);
+    color: var(--color-text-light);
+    margin: 20px auto 0 auto;
+    
 }
