--- a/style.css
+++ b/style.css
@@ -1,132 +1,60 @@
-:root {
-    --color-text-dark: #1e1c25;
-    --color-text-light: #f8f8f8;
-    --color-background-dark: #1e1c25;
-    --color-background-light: #f8f8f8;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, Arial, sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-}
-
 * {
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-}
-
-html, body {
     margin: 0;
     padding: 0;
-    height: 100%;
-    font-size: 14px;
+    box-sizing: border-box;
+    font-family: system-ui, "Oswald", sans-serif;
+    font-optical-sizing: auto;
 }
 
 body {
+    color: rgb(0, 0, 0);
+    padding: 10px;
+    width: 100%;
     height: 100vh;
-    width: 100%;
 }
 
-#nav {
-    background-color: var(--color-background-dark);
-    color: var(--color-text-light);
-    padding: 15px 20px;
-    text-align: center;
-    width: 100%;
-    margin: 0 auto;
+section {
+    margin: 20px 0;
 }
 
-#divider {
-    border-top: 1px solid var(--color-text-light);
-    width: 90%;
-    margin: 0 auto;
+.hero_header_elements h1,.hero_header_elements p, .hero_header_elements button {
+    margin: 10px 10px;
 }
 
-#wrapper {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
-main {
-    flex: 1;
-}
-
-.section {
-    padding: 20px 20px;
-    max-width: 1200px;
-    margin: 0 auto;
-    border-radius: 5px;
-}
-.section_dark {
-    background-color: var(--color-background-dark);
-    color: var(--color-text-light);
-}
-
-.buttons button {
-    margin-top: 20px;
-    margin-right: 10px;
+.a {
+    background-color: rgb(245, 184, 42);
+    color: rgb(255, 255, 255);
+    border: none;
     padding: 10px 20px;
     cursor: pointer;
-    width: 250px;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(20, 20, 20, 0.504);
+}
+
+.b {
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     border: none;
+    padding: 10px 20px;
+    cursor: pointer;
 }
 
-button a {
-    text-decoration: none;
-    color: inherit;
-    font-size: 1.5rem;
+.a, .b {
+    font-size: 1.2rem;
+    border-radius: 5px;
 }
 
-.buttons {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.leistungen_elements {
+    margin: 0 0 20px 0;
 }
 
-.buttons button:hover {
-    background-image: linear-gradient(135deg, #d3e456, #e5dc28);
-    color: var(--color-text-dark);
+.hero_header_img img {
+    width: 100%;
+    height: auto;
 }
 
-.button_dark {
-    background-color:var(--color-background-dark);
-    color: var(--color-text-light);
-}
-
-.button_light {
-    background-color: var(--color-light);
-    color: var(--color-dark);
-}
-.card
-{
-    background-color: var(--color-background-light);
-    color: var(--color-text-dark);
+.card {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-    margin: 20px auto;
-    text-align: center;
-}
-
-#profilbild {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    display: block;
-    margin: 20px auto 0 auto;
-    border: solid 5px var(--color-background-dark);
-    box-shadow: 0 4px 8px rgba(20, 20, 20, 0.504);
-}
-
-footer {
-    width: 100%;
-    text-align: center;
-    padding: 20px;
-    background-color: var(--color-background-dark);
-    color: var(--color-text-light);
-    margin: 20px auto 0 auto;
-    
 }
